--- a/Assets/styles/style.css
+++ b/Assets/styles/style.css
@@ -1,4 +1,13 @@
 /* Home page */
+div.c-wrapper {
+  width: 80%;
+  margin: auto;
+}
+
+.carousel-inner > .carousel-item > img{
+  width: 100%;
+  margin: auto;
+}
 #intro {
   text-align: center;
   padding-top: 25px;
